# BanService

./: .gitignore  CMakeLists.txt  docker-compose.yaml  main.c
docs/: BanService Class Diagram.puml  db.drawio
resources/sql/: init.sql
resources/swagger/: swagger.json
src/: env.c  env.h  utils.c  utils.h
src/server/controller/: routes.c  routes.h
src/server/controller/ban/: ban_controller.c  ban_controller.h
src/server/controller/swagger/: swagger_controller.c  swagger_controller.h
src/server/db/driver/postgres/: postgres_database.c  postgres_database.h
src/server/domain/ban/: ban.c  ban.h
src/server/dto/ban/: ban_dto.c  ban_dto.h
src/server/dto/ban_request/: ban_request.c  ban_request.h
src/server/repository/: ban_repository.c  ban_repository.h
src/server/service/: ban_service.c  ban_service.h
